<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24w"
            android:title="@string/home" />
        <item
            android:id="@id/favouriteFragment"
            android:icon="@drawable/ic_baseline_favorite_24w"
            android:title="@string/favourite" />
        <item
            android:id="@id/weatherAlertFragment"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/custom_weather_alert" />
        <item
            android:id="@id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>


</menu>