<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.theweather.view.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_favouriteFragment2"
            app:destination="@id/favouriteFragment" />

        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.theweather.view.ui.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_favouriteFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_favouriteFragment_to_mapsFragment"
            app:destination="@id/mapsFragment"
            app:popUpTo="@id/favouriteFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_favouriteFragment_to_weatherFavouriteFragment"
            app:destination="@id/weatherFavouriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/weatherAlertFragment"
        android:name="com.example.theweather.view.ui.WeatherAlertFragment"
        android:label="@string/weatherAlert"
        tools:layout="@layout/fragment_weather_alert">
        <action
            android:id="@+id/action_weatherAlertFragment_to_createAlertFragment"
            app:destination="@id/createAlertFragment" />
    </fragment>

    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.theweather.view.ui.MapsFragment"
        android:label="@string/chooseLocation"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_mapsFragment_to_favouriteFragment"
            app:destination="@id/favouriteFragment"
            app:popUpTo="@id/mapsFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="toHomeFragment"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/action_mapsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/mapsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/weatherFavouriteFragment"
        android:name="com.example.theweather.view.ui.WeatherFavouriteFragment"
        android:label="@string/favouriteWeather">
        <argument
            android:name="weatherDate"
            app:argType="com.example.theweather.model.WeatherResult" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.theweather.view.ui.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_mapsFragment"
            app:destination="@id/mapsFragment"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_settingsFragment_to_weatherAlertFragment"
            app:destination="@id/weatherAlertFragment" />
    </fragment>
    <fragment
        android:id="@+id/createAlertFragment"
        android:name="com.example.theweather.view.ui.CreateAlertFragment"
        android:label="@string/createAlert">
        <action
            android:id="@+id/action_createAlertFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>